@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.71 $) $Date: 2006/05/23 10:40:11 $
+ @(#) $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.72 $) $Date: 2006/06/07 09:54:36 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/05/23 10:40:11 $ by $Author: brian $
+ Last Modified $Date: 2006/06/07 09:54:36 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: inet.c,v $
+ Revision 0.9.2.72  2006/06/07 09:54:36  brian
+ - minor non-service affecting bug found by inspection
+
  Revision 0.9.2.71  2006/05/23 10:40:11  brian
  - handle non-exported sysctl_ip_default_ttl on receive FC4 kernels
 
@@ -90,10 +93,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.71 $) $Date: 2006/05/23 10:40:11 $"
+#ident "@(#) $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.72 $) $Date: 2006/06/07 09:54:36 $"
 
 static char const ident[] =
-    "$RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.71 $) $Date: 2006/05/23 10:40:11 $";
+    "$RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.72 $) $Date: 2006/06/07 09:54:36 $";
 
 /*
    This driver provides the functionality of IP (Internet Protocol) over a connectionless network
@@ -579,7 +582,7 @@ tcp_set_skb_tso_factor(struct sk_buff *skb, unsigned int mss_std)
 #define SS__DESCRIP	"UNIX SYSTEM V RELEASE 4.2 FAST STREAMS FOR LINUX"
 #define SS__EXTRA	"Part of the OpenSS7 Stack for Linux Fast-STREAMS."
 #define SS__COPYRIGHT	"Copyright (c) 1997-2005 OpenSS7 Corporation.  All Rights Reserved."
-#define SS__REVISION	"OpenSS7 $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.71 $) $Date: 2006/05/23 10:40:11 $"
+#define SS__REVISION	"OpenSS7 $RCSfile: inet.c,v $ $Name:  $($Revision: 0.9.2.72 $) $Date: 2006/06/07 09:54:36 $"
 #define SS__DEVICE	"SVR 4.2 STREAMS INET Drivers (NET4)"
 #define SS__CONTACT	"Brian Bidulock <bidulock@openss7.org>"
 #define SS__LICENSE	"GPL"
@@ -1246,6 +1249,7 @@ ss_trylockq(queue_t *q)
 			ss->rwait = q;
 		if (q == ss->wq)
 			ss->wwait = q;
+		--ss->users;
 	}
 	spin_unlock_bh(&ss->qlock);
 	return (res);
